<resources>
    <string name="app_name">InventoryApp1</string>
    <string name="btn_inventory_next1">Next</string>
    <string name="btn_inventory_back_step1">Back</string>
    <string name="btn_inventory_final_step1">Submit the product</string>
    <string name="set_inventory_max_items1">10</string>
    <string name="txt_inventory_other1">&#160;out of&#160;</string>
    <string name="btn_inventory_reset1">Reset</string>
    <string name="intro_inventory">Please check all your inventory.</string>
    <string name="intro_inventory_notes1">Step 1/5</string>
    <string name="intro_inventory_notes2">Step 2/5</string>
    <string name="intro_inventory_notes3">Step 3/5</string>
    <string name="intro_inventory_notes4">Step 4/5</string>
    <string name="any_other_feedback">Your name</string>
    <string name="msg_feedback_confirmation">Thank you for providing your product.</string>
    <string name="msg_feedback_final_confirmation">We thank you for your time spent.</string>
    <string name="txt_tbl_title_products1">Products</string>
    <string name="txt_tbl_title_suppliers1">Suppliers</string>
    <string name="txt_tbl_title_avr_price1">Average price</string>
    <string name="txt_tbl_cal_items_products1">100</string>
    <string name="txt_tbl_cal_items_suppliers1">500</string>
    <string name="txt_tbl_cal_items_avr_price1">99</string>
    <string name="txt_tbl_header_headline1">Your central place to organize inventory.</string>
    <string name="txt_tbl_header_logo_alt1">Inventory App</string>
    <string name="txt_tbl_feature_list_inventory_alt1">Inventory App</string>
    <string name="txt_sec_1_cat_1_cpromos_title_1">Show products</string>
    <string name="txt_sec_1_cat_1_cpromos_title_2">Read more</string>
    <string name="txt_display_inventory_record1">The inventory table contains</string>
    <string name="txt_display_inventory_record2">inventory_assets.</string>
    <string name="txt_display_inventory_dummy_record1">Headphones</string>
    <string name="txt_display_inventory_dummy_record2">9.8</string>
    <string name="txt_display_inventory_dummy_record3">300</string>
    <string name="txt_display_inventory_dummy_record4">Sony</string>
    <string name="txt_display_inventory_dummy_record5">001 5901298</string>
    <string name="txt_log_inventory_record1">InventoryEntry</string>
    <string name="txt_log_inventory_record2">New row ID</string>
    <string name="txt_log_inventory_record3">Error with saving item</string>
    <string name="txt_log_inventory_record4">Item saved with row id</string>
    <string name="txt_log_inventory_record5">InventoryActivity</string>
    <string name="no_products">No products found.</string>
    <string name="no_internet_connection">no_internet_connection</string>
    <string name="no_db_connection">no_db_connection</string>
    <string name="settings_menu_item">Settings</string>
    <string name="settings_title">Products Settings</string>
    <string name="action_insert_inventory_data">Insert inventory data</string>
    <string name="action_delete_all_entries">Delete all products</string>
    <string name="editor_activity_title_new_product">Add a product</string>
    <string name="editor_activity_title_edit_product">Edit product</string>
    <string name="action_save">Save</string>
    <string name="action_delete">Delete</string>
    <string name="action_insert_dummy_data">Insert Dummy Data</string>
    <string name="title_cat_inventory_overview">Inventory overview</string>
    <string name="title_cat_inventory_assets_product_overview">Product overview</string>
    <string name="title_cat_inventory_assets_product_name">Item</string>
    <string name="title_cat_inventory_assets_product_price">Cost per item</string>
    <string name="title_cat_inventory_assets_product_quantity">Quantity</string>
    <string name="label_cat_inventory_assets_product_name">Item</string>
    <string name="label_cat_inventory_assets_product_price">Cost per item</string>
    <string name="label_cat_inventory_assets_product_quantity">Quantity</string>
    <string name="label_cat_inventory_logistics_supplier_name">Supplier name</string>
    <string name="label_cat_inventory_logistics_supplier_phone">Supplier phone</string>
    <string name="title_cat_inventory_logistics_overview">Supplier overview</string>
    <string name="hint_product_product_name">Product name</string>
    <string name="category_inventory_price">Price</string>
    <string name="category_inventory_quantity">Quantity</string>
    <string name="category_inventory_supplier_name">Supplier name</string>
    <string name="category_inventory_supplier_phone">Supplier phone</string>
    <string name="hint_inventory_assets_product_name">Headphones</string>
    <string name="hint_inventory_assets_product_price">8.99</string>
    <string name="hint_inventory_assets_product_quantity">249</string>
    <string name="hint_inventory_logistics_supplier_name">Sony</string>
    <string name="hint_inventory_logistics_supplier_phone">386 5901 18996</string>
    <string name="hint_inventory_currency_default">EUR</string>
    <string name="hint_inventory_pcs">Pcs.</string>
    <string name="unit_inventory_weight">kg</string>
    <string name="unit_inventory_pcs">Pcs.</string>
    <string name="unit_inventory_currency_default">EUR</string>
    <string name="inventory_status_unknown">Unknown</string>
    <string name="inventory_status_stock_0">0</string>
    <string name="inventory_status_stock_full">Full stock</string>
    <string name="inventory_status_stock_in_stock">In stock</string>
    <string name="inventory_currency_default">EUR</string>
    <string name="inventory_curreny_option1">USD</string>
    <string name="inventory_curreny_option2">GBP</string>
    <string name="inventory_curreny_option3">CHF</string>
    <string name="inventory_unit_stockstorage_default">Pcs.</string>
    <string name="inventory_unit_stockstorage_option1">Pc.</string>
    <string name="gender_female">Female</string>
    <string name="inventory_insert_product_succesful">Inventory activity - Item saved</string>
    <string name="inventory_insert_product_failed">Inventory activity - Error with saving item</string>
    <string name="editor_insert_product_successful">Product saved</string>
    <string name="editor_insert_product_failed">Error with saving product</string>
    <string name="editor_insert_product_name_requested">Name – This is a required field.</string>
    <string name="editor_insert_product_price_requested">Price – This is a required field.</string>
    <string name="editor_insert_product_quantity_requested">Quantity – This is a required field.</string>
    <string name="editor_enter_inventory_logistics_supplier_phone">Supplier phone number is needed.</string>
    <string name="editor_insert_logistics_supplier_name_requested">Supplier name – This is a required field.</string>
    <string name="editor_insert_logistics_supplier_phone_requested">Supplier phone – This is a required field.</string>
    <string name="editor_insert_row_failed">Failed to insert row for</string>
    <string name="editor_update_product_successful">Editor activity - Product updated</string>
    <string name="editor_update_product_failed">Editor activity - Error with updating product</string>
    <string name="empty_view_title_text">It&#8230;s a bit lonely here...</string>
    <string name="empty_view_subtitle_text1">Get started by adding a product!</string>
    <string name="empty_view_subtitle_text2">Name – This is a required field. Enter the name of the item in this field. Initial quantity on hand – This is a required field. Cost – Enter that amount that you paid for the item. Initial quantity on hand – This is a required field. Suplier name and supplier phone on hand – These are required fields.</string>
    <string name="editor_delete_product_successful">Product deleted</string>
    <string name="editor_delete_product_failed">Error with deleting product</string>
    <string name="delete_dialog_msg">Delete this product?</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="unknown_product">Unknown product</string>
    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>
    <string name="discard">Discard</string>
    <string name="keep_editing">Keep Editing</string>
    <string name="btn_inc_quantity">Increase quantity</string>
    <string name="btn_dec_quantity">Decrease quantity</string>
    <string name="btn_inventory_assets_buy_item">Buy item</string>
    <string name="msg_log_insert_row_successful1">InventoryActivity</string>
    <string name="msg_log_insert_row_successful2">New row ID</string>
    <string name="msg_log_insert_row_failed1">Failed to insert row for</string>
    <string name="msg_log_delete_row_successful1">InventoryActivity</string>
    <string name="msg_log_delete_row_successful2">rows deleted from inventory database</string>
    <string name="msg_log_illegalstateexception1">Unknown URI</string>
    <string name="msg_log_illegalstateexception2">with match</string>
    <string name="msg_log_illegalstateexception3">Insertion is not supported for</string>
    <string name="msg_log_illegalstateexception4">Product requires a name.</string>
    <string name="msg_log_illegalstateexception5">Product requires valid positive price.</string>
    <string name="msg_log_illegalstateexception6">Product requires valid quantity.</string>
    <string name="msg_log_illegalstateexception7">Supplier requires a name.</string>
    <string name="msg_log_illegalstateexception8">Supplier phone requires valid supplier phone (Fill in a positive value.).</string>
    <string name="msg_log_illegalstateexception9">Cannot query unknown URI</string>

</resources>
